--- a/src/template.html
+++ b/src/template.html
@@ -19,6 +19,12 @@
 
 		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 
+		<style type="text/css">
+			
+			body { margin: 0; }
+
+		</style>
+
 	</head>
 
 	<body>
