--- a/src/template.html
+++ b/src/template.html
@@ -19,13 +19,49 @@
 
 		<style type="text/css">
 			
-			body { margin: 0; }
+			* {
+				font-family: arial;
+				font-weight: 300;
+			}
+
+			body {
+				margin: 0;
+			}
+
+			#info {
+				position: fixed;
+				left: 50%;
+				transform: translateX( -50% );
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				margin-top: 20px;
+			}
+
+			h1 {
+				margin: 0;
+				font-size: 1.5em;
+			}
+
+			h2 {
+				margin: 0;
+				font-size: 1em;
+			}
 
 		</style>
 
 	</head>
 
 	<body>
+
+		<div id="info">
+			
+			<h1>three.js - windmill scene</h1>
+
+			<h2>by <a href="https://github.com/felixmariotto" target="_blank">felix mariotto</a>
+
+		</div>
 
 		<script src="./bundle.js"></script>
 
